--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,43 +10,35 @@
 
     <LinearLayout
         android:id="@+id/ll_urlgo"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.10"
         android:orientation="horizontal"
         android:weightSum="1">
 
-        <EditText
-            android:id="@+id/et_url"
+        <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.95" />
+            android:layout_weight="0.1"
+            android:layout_alignParentLeft="true"/>
+
+        <EditText
+            android:id="@+id/et_url"
+            android:layout_width="307dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"/>
 
         <Button
             android:id="@+id/btn_go"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.05"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.2"
             android:background="@color/colorPrimary"
-            android:text="GO"
+            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:text="Search"
             android:textColor="#FFFFFF" />
-
     </LinearLayout>
-
-
-    <WebView
-        android:id="@+id/wv_brow"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.80">
-
-    </WebView>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
 
 
     <LinearLayout
@@ -62,39 +54,75 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
+            android:layout_x="3dp"
+            android:layout_y="39dp"
             android:background="@color/colorPrimary"
             android:text="Forward"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:layout_below="@+id/ll_urlgo"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <Button
             android:id="@+id/btn_bck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
+            android:layout_x="4dp"
+            android:layout_y="59dp"
             android:background="@color/colorPrimary"
             android:text="Back"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:layout_alignBaseline="@+id/btn_fwd"
+            android:layout_alignBottom="@+id/btn_fwd"
+            android:layout_toRightOf="@+id/btn_fwd"
+            android:layout_toEndOf="@+id/btn_fwd" />
 
         <Button
             android:id="@+id/btn_reload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
+            android:layout_x="0dp"
+            android:layout_y="53dp"
             android:background="@color/colorPrimary"
             android:text="Refresh"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:layout_alignBaseline="@+id/btn_bck"
+            android:layout_alignBottom="@+id/btn_bck"
+            android:layout_toRightOf="@+id/btn_bck"
+            android:layout_toEndOf="@+id/btn_bck" />
 
         <Button
             android:id="@+id/btn_clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
+            android:layout_x="0dp"
+            android:layout_y="60dp"
             android:background="@color/colorPrimary"
             android:text="Clear"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:layout_below="@+id/ll_urlgo"
+            android:layout_toRightOf="@+id/btn_reload"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
+    </LinearLayout>
+
+    <WebView
+        android:id="@+id/wv_brow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.80"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btn_fwd">
+
+    </WebView>
 
     </LinearLayout>
 
 
-</RelativeLayout>
+
+
+
