--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
     tools:context="com.example.anishkelkar.androidbrowsersoftlab.MainActivity">
+
+    <!--<Button
+        android:id="@+id/btn_hist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:text="History"
+        android:textColor="#FFFFFF"/>-->
 
     <RelativeLayout
         android:id="@+id/ll_urlgo"
@@ -40,10 +48,6 @@
             android:layout_below="@id/et_url"
 
             />
-
-
-
-
 
 
     </RelativeLayout>
@@ -111,14 +115,14 @@
             android:layout_toEndOf="@+id/btn_bck" />
 
         <Button
-            android:id="@+id/btn_clear"
+            android:id="@+id/btn_hist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
             android:layout_x="0dp"
             android:layout_y="60dp"
             android:background="@color/colorPrimary"
-            android:text="Clear"
+            android:text="History"
             android:textColor="#FFFFFF"
             android:layout_below="@+id/ll_urlgo"
             android:layout_toRightOf="@+id/btn_reload"
@@ -126,8 +130,6 @@
             android:layout_alignParentEnd="true" />
 
     </LinearLayout>
-
-
 
 </LinearLayout>
 
